--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,4 +12,23 @@
   <link rel="stylesheet" href="{{ "/css/syntax.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+
+  <style>
+   table{
+       width: 100%;
+       border-collapse: collapse;
+       border-spacing: 0;
+       border:1px solid #ff0000;
+   }
+
+   th{
+       border:1px solid #000000;
+   }
+
+   td{
+       border:1px solid #000000;
+       padding: 1px 2px;
+   }
+  </style>
+
 </head>
