--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,15 @@
       </div>
     </div>
 
+    <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    </script>
+
+    <script type="text/x-mathjax-config">
+     MathJax.Hub.Config({
+         TeX: { equationNumbers: { autoNumber: "AMS" } }
+     });
+    </script>
 
     <script>
      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
