--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,8 @@
       </a>
 
       <div class="trigger">
+          <a href="https://stackexchange.com/users/457464/zyxue"><img src="https://stackexchange.com/users/flair/457464.png" width="208" height="58" alt="profile for zyxue on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for zyxue on Stack Exchange, a network of free, community-driven Q&amp;A sites" /></a>
+
         {% for my_page in site.pages %}
           {% if my_page.title %}
           <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
