written _posts/2018-05-15-on-p-value-and-FDR.md

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,5 +33,16 @@
      ga('send', 'pageview');
 
     </script>
+
+    <script>
+     /* http://docs.mathjax.org/en/latest/tex.html */
+     MathJax.Hub.Config({
+         tex2jax: {
+             inlineMath: [['$','$'], ['\\(','\\)']],
+             processEscapes: true
+         }
+     })
+    </script>;
+
   </body>
 </html>
