added jquery CDN

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,14 @@
 
   <body>
 
+
+      <!-- has to be load before $ function is used -->
+
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+              integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
+              crossorigin="anonymous">
+      </script>
+
     {% include header.html %}
 
     <div class="page-content">
